package com.example.androidproject;

public class Vice {

    public Vice() {

    }

}
